New landscape printing option: still missing for LaTeX, though...

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2002  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.29 2002-01-22 16:54:03 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.30 2002-01-30 18:37:16 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -49,15 +49,15 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 0.51, 22 January 2002}
+\date{Version 0.52, ? February 2002}
 
 \maketitle
 
 %%tth: \section*{Download}
 %%tth: The current distribution of GL2PS is available either as a
-%%tth: \href{http://www.geuz.org/gl2ps/gl2ps-0.51.tar.gz}{tar.gz}
+%%tth: \href{http://www.geuz.org/gl2ps/gl2ps-0.52.tar.gz}{tar.gz}
 %%tth: or as a 
-%%tth: \href{http://www.geuz.org/gl2ps/gl2ps-0.51.zip}{zip}
+%%tth: \href{http://www.geuz.org/gl2ps/gl2ps-0.52.zip}{zip}
 %%tth: archive. These archives contain both a
 %%tth: \href{http://www.geuz.org/gl2ps/gl2ps.ps}{PostScript}
 %%tth: and a
@@ -347,7 +347,8 @@ Jean-Fran\c{c}ois Remacle (\email{remacle@scorec.rpi.edu}) for plane
 equation fixes; Bart Kaptein (\email{B.L.Kaptein@lumc.nl}) for memory leak
 fixes; Quy Nguyen-Dai (\email{quy@vnilux.com}) for output file size
 optimization; Sam Buss (\email{sbuss@ucsd.edu}) for the new smooth shaded
-triangle code.
+triangle code; Shane Hill (\email{Shane.Hill@dsto.defence.gov.au}) for the
+landscape option implementation.
 
 %Bruce Naylor (\email{naylor@comp-graphics.com}) for some BSP tree and occlusion
 %culling hints;
@@ -382,6 +383,8 @@ primitives. Fix handling of zero-length strings. New options for \LaTeX\
 output. Changed (again) the line width computation.
 \item[0.51] (Jan 22, 2002) Fixed erroneous drawing of text primitives lying
 outside the viewport.
+\item[0.52] (Feb ?, 2002) New \dd{GL2PS_LANDSCAPE} option. Other minor
+changes.
 \end{description}
 
 % Occlusion culling... In version 9.99? :-(
