landscape for latex

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2002  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.30 2002-01-30 18:37:16 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.31 2002-02-15 00:23:27 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -49,7 +49,7 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 0.52, ? February 2002}
+\date{Version 0.52, 14 February 2002}
 
 \maketitle
 
@@ -383,7 +383,7 @@ primitives. Fix handling of zero-length strings. New options for \LaTeX\
 output. Changed (again) the line width computation.
 \item[0.51] (Jan 22, 2002) Fixed erroneous drawing of text primitives lying
 outside the viewport.
-\item[0.52] (Feb ?, 2002) New \dd{GL2PS_LANDSCAPE} option. Other minor
+\item[0.52] (Feb 14, 2002) New \dd{GL2PS_LANDSCAPE} option. Other minor
 changes.
 \end{description}
 
