--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2002  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.31 2002-02-15 00:23:27 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.32 2002-02-15 00:25:10 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -383,8 +383,7 @@ primitives. Fix handling of zero-length strings. New options for \LaTeX\
 output. Changed (again) the line width computation.
 \item[0.51] (Jan 22, 2002) Fixed erroneous drawing of text primitives lying
 outside the viewport.
-\item[0.52] (Feb 14, 2002) New \dd{GL2PS_LANDSCAPE} option. Other minor
-changes.
+\item[0.52] (Feb 14, 2002) New \dd{GL2PS_LANDSCAPE} option.
 \end{description}
 
 % Occlusion culling... In version 9.99? :-(
