--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2002  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.32 2002-02-15 00:25:10 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.33 2002-03-08 18:05:23 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -49,15 +49,15 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 0.52, 14 February 2002}
+\date{Version 0.53, 8 March 2002}
 
 \maketitle
 
 %%tth: \section*{Download}
 %%tth: The current distribution of GL2PS is available either as a
-%%tth: \href{http://www.geuz.org/gl2ps/gl2ps-0.52.tar.gz}{tar.gz}
+%%tth: \href{http://www.geuz.org/gl2ps/gl2ps-0.53.tar.gz}{tar.gz}
 %%tth: or as a 
-%%tth: \href{http://www.geuz.org/gl2ps/gl2ps-0.52.zip}{zip}
+%%tth: \href{http://www.geuz.org/gl2ps/gl2ps-0.53.zip}{zip}
 %%tth: archive. These archives contain both a
 %%tth: \href{http://www.geuz.org/gl2ps/gl2ps.ps}{PostScript}
 %%tth: and a
@@ -348,15 +348,17 @@ equation fixes; Bart Kaptein (\email{B.L.Kaptein@lumc.nl}) for memory leak
 fixes; Quy Nguyen-Dai (\email{quy@vnilux.com}) for output file size
 optimization; Sam Buss (\email{sbuss@ucsd.edu}) for the new smooth shaded
 triangle code; Shane Hill (\email{Shane.Hill@dsto.defence.gov.au}) for the
-landscape option implementation.
+landscape option implementation; Romain Boman (\email{r_boman@yahoo.fr}) for
+the Windows dll generation.
 
 %Bruce Naylor (\email{naylor@comp-graphics.com}) for some BSP tree and occlusion
 %culling hints;
 
 Projects similar to \dd{GL2PS} include: Michael Sweet's GLP library
-(\url{http://dns.easysw.com/~mike/opengl/index.html}); Mark J. Kilgard's
-rendereps (\url{http://reality.sgi.com/opengl/tips/Feedback.html}); the
-GLpr library from CEI international (\url{http://www.ceintl.com/}).
+(\url{http://www.easysw.com/~mike/opengl/index.html}); Mark J. Kilgard's
+rendereps (\url{http://www.opengl.org/developers/code/mjktips/Feedback.html}); the
+GLpr library from CEI international (\url{http://www.ceintl.com/}; this
+product does not seem to be available anymore).
 
 \section{Versions}
 
@@ -384,6 +386,8 @@ output. Changed (again) the line width computation.
 \item[0.51] (Jan 22, 2002) Fixed erroneous drawing of text primitives lying
 outside the viewport.
 \item[0.52] (Feb 14, 2002) New \dd{GL2PS_LANDSCAPE} option.
+\item[0.53] (Mar 8, 2002) New \dd{GL2PSDLL} compilation flag to allow the
+generation of a Windows dll.
 \end{description}
 
 % Occlusion culling... In version 9.99? :-(
