--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2002  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.35 2002-06-04 21:38:26 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.36 2002-06-04 21:39:52 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -349,7 +349,8 @@ fixes; Quy Nguyen-Dai (\email{quy@vnilux.com}) for output file size
 optimization; Sam Buss (\email{sbuss@ucsd.edu}) for the new smooth shaded
 triangle code; Shane Hill (\email{Shane.Hill@dsto.defence.gov.au}) for the
 landscape option implementation; Romain Boman (\email{r_boman@yahoo.fr}) for
-the Windows dll generation.
+the Windows dll generation; Rouben Rostamian (\email{rostamian@umbc.edu})
+for various bug fixes.
 
 %Bruce Naylor (\email{naylor@comp-graphics.com}) for some BSP tree and occlusion
 %culling hints;
