--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2002  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.38 2002-06-11 15:45:55 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.39 2002-06-21 21:08:13 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -395,7 +395,7 @@ generation of a Windows dll.
 sorting of text objects; removed (non functional) occlusion culling code;
 fixed handling of color and line width attributes when gl2ps was called
 multiple times inside the same program.
-\item[0.61] (Jun 12, 2002) Fixed the fix for sorting of text objects;
+\item[0.61] (Jun 12, 2002) Fixed the fix for the sorting of text objects;
 introduced tolerance for floating point comparison.
 \end{description}
 
