--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2002  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.40 2002-06-21 21:11:22 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.41 2002-07-16 05:29:45 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -75,7 +75,7 @@ vector output is desired. The main difference between GL2PS and other similar
 libraries is the use of sorting algorithms capable of handling intersecting and
 stretched polygons, as well as non manifold objects.
 
-The library, written in C, is released under GNU Library General Public
+The library, written in C, is released under the GNU Library General Public
 License (see \url{http://www.gnu.org/} for more details), and is available
 at \url{http://www.geuz.org/gl2ps/}. Any corrections, questions or
 suggestions should be e-mailed to \email{geuz@geuz.org}.
@@ -396,7 +396,7 @@ sorting of text objects; removed (non functional) occlusion culling code;
 fixed handling of color and line width attributes when gl2ps was called
 multiple times inside the same program.
 \item[0.61] (Jun 21, 2002) Fixed the fix for the sorting of text objects;
-introduced tolerance for floating point comparison.
+introduced tolerance for floating point comparisons.
 \end{description}
 
 % Occlusion culling... In version 9.99? :-(
