--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2002  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.42 2002-09-03 23:35:35 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.43 2002-09-06 19:00:31 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -80,7 +80,7 @@ License (see \url{http://www.gnu.org/} for more details), and is available
 at \url{http://www.geuz.org/gl2ps/}. Any corrections, questions or
 suggestions should be e-mailed to \email{geuz@geuz.org}.
 
-The interface consists of seven functions, all beginning with the prefix
+The interface consists of eight functions, all beginning with the prefix
 \dd{gl2ps}. All the data structures and the symbolic constants peculiar to
 GL2PS begin with \dd{GL2PS}.
 
@@ -195,6 +195,10 @@ output. This is useful to produce the image part of a \LaTeX\ output.
 
 \item[\dd{GL2PS_LANDSCAPE}] Landscape orientation instead of portrait.
 
+\item[\dd{GL2PS_NO_PS3_SHADING}] Disables the use of the \dd{shfill}
+PostScript level 3 operator, which is usually not well handled when
+converting to PDF (see also section~\ref{sec:gl2psNumShadeColors}).
+
 %\item[\dd{GL2PS_OCCLUSION_CULL}] All the hidden polygons are removed from
 %the output, thus substancially reducing the size of the output file. This
 %is not functional yet.
@@ -308,6 +312,25 @@ buffer.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\subsection{\texttt{gl2psNumShadeColors}}
+\label{sec:gl2psNumShadeColors}
+
+\subsubsection{Specification}
+
+\begin{verbatim}
+void gl2psNumShadeColors( GLint nr, GLint ng, GLint nb )
+\end{verbatim}
+
+\subsubsection{Description}
+
+\dd{gl2psNumShadeColors} sets the number of colors to use when approximating
+shaded triangles with small flat shaded ones (either if the \dd{shfill}
+operator is not supported by your system, or if the
+\dd{GL2PS_NO_PS3_SHADING} option is set). The last call before
+\dd{gl2psEndPage} is the one that counts.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \section{Example}
 
 Here is a typical calling sequence to produce BSP sorted PostScript output in
@@ -355,7 +378,8 @@ optimization; Sam Buss (\email{sbuss@ucsd.edu}) for the new smooth shaded
 triangle code; Shane Hill (\email{Shane.Hill@dsto.defence.gov.au}) for the
 landscape option implementation; Romain Boman (\email{r_boman@yahoo.fr}) for
 the Windows dll generation; Rouben Rostamian (\email{rostamian@umbc.edu})
-for various bug fixes.
+for various bug fixes; Diego Santa Cruz (\email{Diego.SantaCruz@epfl.ch})
+for the new shaded primitives drawing code.
 
 %Bruce Naylor (\email{naylor@comp-graphics.com}) for some BSP tree and occlusion
 %culling hints;
@@ -400,8 +424,12 @@ fixed handling of color and line width attributes when gl2ps was called
 multiple times inside the same program.
 \item[0.61] (Jun 21, 2002) Fixed the fix for the sorting of text objects;
 introduced tolerance for floating point comparisons.
-\item[0.62] (..., 2002) New \dd{GL2PS_EPS} option to produce Encapsulated
-PostScript files.
+\item[0.62] (..., 2002) Added \dd{GL2PS_EPS} option to produce Encapsulated
+PostScript files; optimized drawing of shaded primitives; New
+\dd{GL2PS_NO_PS3_SHADING} option to disable the use of the PostScript level
+3 \dd{shfill} operator (usually not well handled when converting to PDF);
+new \texttt{gl2psNumShadeColors} function to set the number colors to use
+when approximating shaded triangles with small flat shaded ones.
 \end{description}
 
 % Occlusion culling... In version 9.99? :-(
