--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2002  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.43 2002-09-06 19:00:31 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.44 2002-09-06 19:01:00 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -49,7 +49,7 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 0.62, ... 2002}
+\date{Version 0.62, 6 September 2002}
 
 \maketitle
 
@@ -424,7 +424,7 @@ fixed handling of color and line width attributes when gl2ps was called
 multiple times inside the same program.
 \item[0.61] (Jun 21, 2002) Fixed the fix for the sorting of text objects;
 introduced tolerance for floating point comparisons.
-\item[0.62] (..., 2002) Added \dd{GL2PS_EPS} option to produce Encapsulated
+\item[0.62] (Sep 6, 2002) Added \dd{GL2PS_EPS} option to produce Encapsulated
 PostScript files; optimized drawing of shaded primitives; New
 \dd{GL2PS_NO_PS3_SHADING} option to disable the use of the PostScript level
 3 \dd{shfill} operator (usually not well handled when converting to PDF);
