--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2002  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.49 2002-11-13 17:59:18 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.50 2002-11-15 18:55:01 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -68,12 +68,11 @@
 
 \section{Introduction}
 
-GL2PS is a library for creating PostScript output from any OpenGL
-application. Though it was primarily designed for three-dimensional geometry,
-mesh and post-processing visualization, it may be useful every time high quality
-vector output is desired. The main difference between GL2PS and other similar
-libraries is the use of sorting algorithms capable of handling intersecting and
-stretched polygons, as well as non manifold objects.
+GL2PS is a library for creating high quality vector output (primarily
+PostScript) from any OpenGL application. The main difference between GL2PS
+and other similar libraries (see section~\ref{sec:contrib}) is the use of
+sorting algorithms capable of handling intersecting and stretched polygons,
+as well as non manifold objects.
 
 The library, written in C, is released under the GNU Library General Public
 License (see \url{http://www.gnu.org/} for more details), and is available
@@ -384,6 +383,7 @@ disable the use of the Level 3 PostScript \dd{shfill} operator, i.e.\ add
 
 
 \section{Contributors}
+\label{sec:contrib}
 
 Michael Sweet (\email{mike@easysw.com}) for the original implementation of
 the feedback buffer parser; Marc Um{\'e}
