--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2002  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.52 2002-12-11 18:29:41 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.53 2002-12-11 18:37:28 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -93,11 +93,11 @@ GL2PS begin with \dd{GL2PS}.
 \subsubsection{Specification}
 
 \begin{verbatim}
-void gl2psBeginPage( char *title, char *producer, GLint format,
-                     GLint sort, GLint options, GLint colormode,
-                     GLint colorsize, GL2PSrgba *colortable,
-                     GLint buffersize,
-                     FILE *stream, char *filename )
+void gl2psBeginPage( const char *title, const char *producer,
+                     GLint format, GLint sort, GLint options, 
+                     GLint colormode, GLint colorsize, 
+                     GL2PSrgba *colortable, GLint buffersize,
+                     FILE *stream, const char *filename )
 \end{verbatim}
 
 \begin{verbatim}
@@ -229,7 +229,8 @@ printed.
 \subsubsection{Specification}
 
 \begin{verbatim}
-void gl2psText( char *string, char *fontname, GLint fontsize )
+void gl2psText( const char *string, const char *fontname,
+                GLint fontsize )
 \end{verbatim}
 
 \subsubsection{Description}
