--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,8 +1,8 @@
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
-%  Copyright (C) 1999-2003  Christophe Geuzaine 
+%  Copyright (C) 1999-2002  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.55 2002-12-14 02:34:40 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.56 2002-12-14 04:18:18 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -49,15 +49,15 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 0.8, ?? January 2003}
+\date{Version 0.71, 13 December 2002}
 
 \maketitle
 
 %%tth: \section*{Download}
 %%tth: The current distribution of GL2PS is available either as a
-%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-0.8.tar.gz}{tar.gz}
+%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-0.71.tar.gz}{tar.gz}
 %%tth: or as a 
-%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-0.8.zip}{zip}
+%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-0.71.zip}{zip}
 %%tth: archive. These archives contain both a
 %%tth: \href{http://www.geuz.org/gl2ps/gl2ps.ps}{PostScript}
 %%tth: and a
@@ -441,8 +441,8 @@ the output file; revised documentation.
 \item[0.7] (Dec 11, 2002) Occlusion culling (\dd{GL2PS_OCCLUSION_CULL}) is
 (finally!) working thanks to the great work of Shahzad Muzaffar; enhanced
 \dd{GL2PS_BEST_ROOT}.
-\item[0.8] (?? ??, 2003) Added example program \dd{gl2psTest.c} to the
-distribution.
+\item[0.71] (Dec 13, 2002) Removed C++ style comments inadvertently left in
+the code; added example program \dd{gl2psTest.c} to the distribution.
 \end{description}
 
 \end{document}
