--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2002  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.56 2002-12-14 04:18:18 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.57 2002-12-16 18:27:14 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -71,7 +71,7 @@
 
 GL2PS is a library for creating high quality vector output (primarily
 PostScript) from any OpenGL application. The main difference between GL2PS
-and other similar libraries (see section~\ref{sec:contrib}) is the use of
+and other similar libraries (see section~\ref{sec:links}) is the use of
 sorting algorithms capable of handling intersecting and stretched polygons,
 as well as non manifold objects.
 
@@ -390,11 +390,18 @@ Muzaffar (\email{Shahzad.Muzaffar@cern.ch}) and Lassi Tuura
 (\email{lassi.tuura@cern.ch}) for the new occlusion culling code and the
 improvement of \dd{GL2PS_BEST_ROOT}.
 
+\section{Links}
+\label{sec:links}
+
 Projects similar to \dd{GL2PS} include: Michael Sweet's GLP library
 (\url{http://www.easysw.com/~mike/opengl/index.html}); Mark J. Kilgard's
 rendereps (\url{http://www.opengl.org/developers/code/mjktips/Feedback.html}); the
 GLpr library from CEI international (\url{http://www.ceintl.com/}; this
 product does not seem to be available anymore).
+
+Toby White (\email{tow@sdf.lonestar.org}) maintains a Python wrapper for
+\dd{GL2PS}, available at
+\url{http://www-theor.ch.cam.ac.uk/people/tow/software.html}.
 
 \section{Versions}
 
