--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2002  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.57 2002-12-16 18:27:14 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.58 2003-01-13 01:57:31 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -359,7 +359,11 @@ disable the use of the Level 3 PostScript \dd{shfill} operator, i.e.\ add
 edit the output file a posteriori (just set \dd{/tryPS3shading} to
 \dd{false} in the PostScript file header).
 
+A complete example can be found in the distribution in the file
+\dd{gl2psTest.c}.
+
 % \section{Implementation Notes}
+% \label{sec:implementation}
 %
 % OpenGL feedback buffer
 % Simple depth sort
@@ -368,6 +372,23 @@ edit the output file a posteriori (just set \dd{/tryPS3shading} to
 % float vs. double
 % polygon offsets
 % PostScript shading
+
+% \section{Bugs and limitations}
+% \label{sec:bugs}
+%
+% We can only capture what's in the feedback buffer. All the stuff applied in
+% the pipeline after the creation of the feedback buffer has to be duplicated
+% in gl2ps (fonts, polygon offset, line stipple, etc.)
+%
+% Rendering large/complicated scenes is slow, and will always be. Vector-based
+% images (and thus gl2ps) are not to replace bitmaps. They just offer high
+% quality (especially for 2D and small 3D) and ease of manipluation (e.g.\
+% think about reusing a picture from a paper you published 3 years ago, when
+% you need to modify the labels, rescale the plot, change the colors, etc.).
+%
+% No transparency yet. See TODO file for a discussion.
+%
+% No textures, fog, volumic rendering, etc.
 
 \section{Contributors}
 \label{sec:contrib}
